Don't run slow count all query.